[package]
name = "short-url"
version = "0.1.0"
authors = ["ttzztztz <ttzztztz@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.57"
lazy_static = "1.4.0"
